fixed z-index causing problem in popup

--- a/css/index.css
+++ b/css/index.css
@@ -470,8 +470,8 @@ html, body {
     backdrop-filter: blur(2px);
     height: 100%;
     width: 100%;
-    z-index: 2001;
     display: none;
+    z-index: 2002;
     animation: scaleUp ease 0.2s;
 }
 
